# mini

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/mini/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  Ops.td  Passes.h
lib/: CMakeLists.txt
lib/mini/: CMakeLists.txt  Canonicalization.cpp  Conversion.cpp  Dialect.cpp  Fusion.cpp  LowerToAffine.cpp  Ops.cpp
tests/: basic.mlir
tools/: CMakeLists.txt  mini-opt.cpp
